cabal-version:      3.0
name:               json-complex-map-keys
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Daniel Díaz
maintainer:         diaz_carrete@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable json-complex-map-keys
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base,
        aeson,
        text,
        time,
        bytestring,
        containers

    hs-source-dirs:   app
    default-language: Haskell2010
